--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -146,3 +146,17 @@
 .o-card-menu-item .o-card-menu-item-icon{
   color:#B2A000 !important;
 }
+//////////////////////////REGISTER///////////////////////
+.container-register {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.card-register {
+  width: 450px;
+  padding: 35px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 30px #000;
+  display: flex;
+  justify-content: center;
+}
