--- a/frontend/src/app/login/register/register.component.html
+++ b/frontend/src/app/login/register/register.component.html
@@ -8,10 +8,13 @@
           <o-column title="REGISTER"  class="login-column">
           <o-row class="row-especial">
             <div fxLayout="row" class="radio-edit">
-              <o-radio attr="id_rolename" label="" [static-data]="getDataArray()"
-                [data]="getValue()" value-column="key" columns="key;value" visible-columns="value" read-only="no"
-                layout="row">
-              </o-radio>
+              <!-- <o-form #form service="userRole" entity="userRole" fxLayout="column" keys="id_user_role"
+              show-header-navigation="no" show-header="no"> -->
+                <o-radio attr="id_rolename" label="" [static-data]="getDataArray()"
+                  [data]="getValue()" value-column="key" columns="key;value" visible-columns="value" read-only="no"
+                  layout="row">
+                </o-radio>
+              <!-- </o-form> -->
             </div>
          </o-row>
               <p></p>
