--- a/frontend/src/app/main/profiles/profile/profile.component.html
+++ b/frontend/src/app/main/profiles/profile/profile.component.html
@@ -14,7 +14,9 @@ show-header-navigation="yes" (onDataLoaded)="formInit()">
         <o-text-input class="input-padding" attr="address" width="375px" required="no"></o-text-input>
       </o-row>
       <o-row>
-
+        <o-text-input class="input-padding" attr="city" width="375px" required="no"></o-text-input>
+      </o-row>
+      <o-row>
         <o-phone-input class="input-padding" attr="phone" width="375px" countries="+34" data="+34" read-only="no" required="yes"></o-phone-input>
         <!-- <o-text-input class="input-padding" attr="phone" width="375px" required="yes"></o-text-input> -->
       </o-row>
