yml configuration added

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -48,7 +48,7 @@
             <span class="dark_text">{{ 'PASSWORD' | oTranslate }} : demouser</span>
           </div> -->
           <span class="title_register">{{ 'REGISTER_TITLE' | oTranslate }}</span>
-          <button mat-raised-button color="accent" type="submit">{{ 'REGISTER' | oTranslate }}</button>
+          <button mat-raised-button color="accent" type="submit" [routerLink] ="['./register/new']">{{ 'REGISTER' | oTranslate }}</button>
         </form>
       </div>
 
