--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -148,15 +148,34 @@
 }
 //////////////////////////REGISTER///////////////////////
 .container-register {
+  background-image:  url("assets/images/fondo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .card-register {
+  background-color: #ECEFF1;
   width: 450px;
   padding: 35px;
   border-radius: 10px;
   box-shadow: 0px 0px 30px #000;
   display: flex;
   justify-content: center;
+  position: relative;
+}
+
+.card-register .o-form-toolbar {
+  flex: none;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  right: 20px;
+  left: 10px;
+}
+
+.o-form-toolbar .o-form-toolbar-header {
+  padding: 0 50px 0 16px !important;
 }
