--- a/frontend/src/app/login/register/register.component.css
+++ b/frontend/src/app/login/register/register.component.css
@@ -20,10 +20,25 @@
 }
 p{
     font-size: 0.5rem;
+    margin-bottom: 10px;
 }
 .radio-edit {
     display:flex;
     flex-direction: row;
     gap: 30px;
     
+}
+
+.login-column:nth-child(1){
+    font-size: 1rem !important;
+}
+.o-form-toolbar-header .mat-toolbar .mat-toolbar-single-row{
+    background-color: red;
+}
+
+.o-form-toolbar .mat-toolbar,
+.card-register>.o-form-toolbar-header{
+  background-color: #B2A000 !important;
+  width: 40%;
+  margin-top: 20px;
 }
