--- a/frontend/src/app/login/register/register.component.html
+++ b/frontend/src/app/login/register/register.component.html
@@ -5,7 +5,7 @@
       show-header-navigation="no" confirm-exit="no">
       
       <o-row>
-          <o-column title="REGISTER"  class="login-column">
+          <o-column title="REGISTER"  class="login-column" style="color:rgb(194, 168, 52); font: 2rem;">
           <o-row class="row-especial">
             <div fxLayout="row" class="radio-edit">
                 <o-radio attr="id_rolename" label="" service="userRole" entity="userRole"  
