--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -159,23 +159,30 @@
 .card-register {
   background-color: #ECEFF1;
   width: 450px;
-  padding: 35px;
+  padding: 35px 35px 50px 35px;
   border-radius: 10px;
   box-shadow: 0px 0px 30px #000;
   display: flex;
   justify-content: center;
   position: relative;
+  border:#B2A000 solid 2px;
+  
 }
+
 
 .card-register .o-form-toolbar {
   flex: none;
   display: block;
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   right: 20px;
   left: 10px;
 }
 
 .o-form-toolbar .o-form-toolbar-header {
   padding: 0 50px 0 16px !important;
+  border: none;
+  box-shadow: none;
+  background-color: transparent;
+
 }
