--- a/frontend/src/app/main/gymsuser/gyms-grid-home/gyms-grid-home.component.html
+++ b/frontend/src/app/main/gymsuser/gyms-grid-home/gyms-grid-home.component.html
@@ -6,9 +6,9 @@
     keys="gymid"
     columns="gymid;photo;name;address;city;cif;phone;email;schedule;description;rate;categories;image1;image2;image3"
     quick-filter-columns="name;city;rate;categories"
-    query-rows="8" show-page-size="false" orderable="false" cols="3"
+    query-rows="9" show-page-size="false" orderable="false" cols="3"
     controls="true"  detail-mode="none" 
-    refresh-button="no" 
+    refresh-button="no" gutter-size="22px"
    
     > <!-- grid-item-height="1:2"  -->
   <o-grid-item *ngFor="let list of gymsGrid.dataArray">
