--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -186,3 +186,22 @@
   background-color: transparent;
 
 }
+//////////botton grid ver más /////////
+div.o-grid-footer .ng-star-inserted{
+
+// padding-left: 300px;
+background-color:#B2A000;
+box-shadow: none;
+margin-left: 45%;
+padding:5px;
+
+}
+// .o-grid-footer .ng-star-inserted >button.mat-button{
+//   position:absolute;
+//   bottom: 0;
+// }
+
+// .mat-raised-button .mat-button .mat-button-base{
+//   position:absolute;
+//   bottom: 0;
+// }
