--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -188,20 +188,20 @@
 }
 //////////botton grid ver más /////////
 div.o-grid-footer .ng-star-inserted{
-
-// padding-left: 300px;
 background-color:#B2A000;
 box-shadow: none;
 margin-left: 45%;
-padding:5px;
+text-align: center;
 
 }
-// .o-grid-footer .ng-star-inserted >button.mat-button{
-//   position:absolute;
-//   bottom: 0;
-// }
 
-// .mat-raised-button .mat-button .mat-button-base{
-//   position:absolute;
-//   bottom: 0;
-// }
+
+.mat-raised-button .mat-button .mat-button-base{
+  padding:15px 15px;
+
+ 
+}
+
+div.o-grid-footer .ng-star-inserted  .mat-raised-button .mat-button .mat-button-base       .mat-button-wrapper{
+  color:white !important;
+}
