page register edit

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -47,7 +47,7 @@
             <span class="dark_text">{{ 'USERNAME' | oTranslate }} : demo</span>
             <span class="dark_text">{{ 'PASSWORD' | oTranslate }} : demouser</span>
           </div> -->
-          <span class="title_register">{{ 'REGISTER_TITLE' | oTranslate }}</span>
+          <span class="title_register title_text">{{ 'REGISTER_TITLE' | oTranslate }}</span>
           <button mat-raised-button color="accent" type="submit" [routerLink] ="['./register/new']">{{ 'REGISTER' | oTranslate }}</button>
         </form>
       </div>
