--- a/frontend/src/app/main/profiles/profile/profile.component.html
+++ b/frontend/src/app/main/profiles/profile/profile.component.html
@@ -2,45 +2,38 @@
 show-header="yes" header-actions="U" keys="user_" keys-sql-types="VARCHAR"
 show-header-navigation="yes" (onDataLoaded)="formInit()">
   
-  <o-row>
-    <o-column title="USER_PROFILE"  class="login-column">
-      <o-row>
-        <o-text-input class="input-padding" attr="name" width="375px" required="yes"></o-text-input>
-      </o-row>
-      <o-row>
-        <o-text-input class="input-padding" attr="surname" width="375px" required="yes"></o-text-input>
-      </o-row>
-      <o-row>
-        <o-text-input class="input-padding" attr="address" width="375px" required="no"></o-text-input>
-      </o-row>
-      <o-row>
-        <o-text-input class="input-padding" attr="city" width="375px" required="no"></o-text-input>
-      </o-row>
-      <o-row>
-        <o-phone-input class="input-padding" attr="phone" width="375px" countries="+34" data="+34" read-only="no" required="yes"></o-phone-input>
-        <!-- <o-text-input class="input-padding" attr="phone" width="375px" required="yes"></o-text-input> -->
-      </o-row>
-      <o-row>
-        <o-email-input attr="email" width="375px"></o-email-input>
-      </o-row>
-      <o-row>   
-        <o-text-input class="input-padding" attr="user_"  required="yes" width="180px" read-only="yes"></o-text-input>
-        <o-slide-toggle color= "primary" id="activeid" style="display: none;" class="input-padding" attr="active" label="{{ 'active' | oTranslate }}" [data]="getValue()" read-only="no"
-        ></o-slide-toggle>
-      </o-row>
-      <o-row>
-        <o-password-input  class="input-padding" attr="password"  required="yes" width="375px" show-password-button="yes"  [validators]="validatorArray" (onChange)="reviewMatches($event)"></o-password-input>
-      </o-row>
-      <o-row>
-        <o-password-input  class="this.className" attr="passwordconfirm" width="375px" required="yes" show-password-button="yes" [validators]="validatorArray">
-          <o-validator error-name="mustMatch" error-text="Password must match"></o-validator>
-        </o-password-input>
-      </o-row>
-      <p>{{'password_required'|oTranslate}}</p>
-      <div class="ontimize-buttons">
-        <o-button attr="basic1" type="STROKED" label="DELETE" layout-padding color="primary" (click)="deleteUser()"></o-button>
-      </div>  
-    </o-column>
+<o-row>
+  <o-column title="USER_PROFILE"  class="login-column">
+    <o-row>   
+      <o-text-input class="input-padding" attr="user_"  required="yes" width="180px" read-only="yes" (input)="onInputChanged()"></o-text-input>
+      <o-slide-toggle color= "primary" id="activeid" style="display: none;" class="input-padding" attr="active" label="{{ 'active' | oTranslate }}" [data]="getValue()" read-only="no" (input)="onInputChanged()"
+      ></o-slide-toggle>
+    </o-row>
+    <o-row>
+      <o-text-input class="input-padding" attr="name" width="375px" required="yes" (input)="onInputChanged()"></o-text-input>
+      <o-text-input class="input-padding" attr="surname" width="375px" required="yes" (input)="onInputChanged()"></o-text-input>
+    </o-row>
+    <o-row class="row-elements">
+      <o-text-input class="input-padding" attr="address" width="375px" required="no" (input)="onInputChanged()"></o-text-input>
+      <o-text-input class="input-padding" attr="city" width="375px" required="no" (input)="onInputChanged()"></o-text-input>
+    </o-row>
+    <o-row>
+      <o-phone-input class="input-padding" attr="phone" width="375px" countries="+34" data="+34" read-only="no" required="yes" (input)="onInputChanged()"></o-phone-input>
+      <o-email-input attr="email" width="375px"></o-email-input>
+    </o-row>
     
-  </o-row>
+    <o-row>
+      <o-password-input  class="input-padding" attr="password"  required="yes" width="375px" show-password-button="yes"  [validators]="validatorArray" (onChange)="reviewMatches($event)" (input)="onInputChanged()"></o-password-input>
+      <o-password-input  id="confirm" style="display: none;" class="this.className" attr="passwordconfirm" width="375px" required="yes" show-password-button="yes" [validators]="validatorArray">
+        <o-validator error-name="mustMatch" error-text="Password must match"></o-validator>
+      </o-password-input>
+    </o-row>
+    <p>{{'password_required'|oTranslate}}</p>
+    <div class="ontimize-buttons">
+      <o-button attr="basic1" type="STROKED" label="DELETE" layout-padding color="primary" (click)="deleteUser()" *ngIf="isModified"></o-button>
+    </div>  
+  </o-column>
+  
+</o-row>
+
 </o-form>
