--- a/frontend/src/app/main/profiles/profile/profile.component.css
+++ b/frontend/src/app/main/profiles/profile/profile.component.css
@@ -1,3 +1,12 @@
 p{
     font-size: 0.5rem;
 }
+
+.row-elements {
+    justify-content: space-between;
+    text-decoration: none;
+}
+
+.input-padding{
+    margin-right: 20px;
+}
