--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -152,16 +152,17 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed; 
-  height: 140vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 14px;
+  
 }
 .card-register {
   background-color: #ECEFF1;
-  width: 450px;
-  padding: 10px 35px 50px 15px;
+  width: 800px;
+  padding: 10px 35px 50px 45px;
   border-radius: 10px;
   box-shadow: 0px 0px 30px #000;
   display: flex;
@@ -170,7 +171,14 @@
   border:#B2A000 solid 2px;
   font-size: 14px;
 
-  
+}
+
+.whegymimg {
+object-fit: contain;
+height: 150px;
+position: absolute;
+right: 50px;
+top: 50px;
 }
 
 //boton footer
@@ -179,8 +187,7 @@
   display: block;
   position: absolute;
   bottom: 0px;
-  right: 20px;
-  left: 10px;
+  right: 0px;
 }
 
 .o-form-toolbar .o-form-toolbar-header {
@@ -200,7 +207,6 @@
 
 .o-container-title .ng-star-inserted{
   font-size: 2.2rem !important;
- padding-left: 35% !important;
 }
 
 
