reviews added in main

--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -18,3 +18,19 @@
  icon="qr_code" route="/main/accesscard">
 </o-card-menu-item>
 </div>
+
+<div >
+  <o-list #list attr="reviews" title="BEST_REVIEWS" service="reviews" entity="review" refresh-button ="no" quick-filter="no"
+  delete-button ="no" keys="reviewid" columns="reviewid;content;rate;date;user_;gymid;photo;name" row-height="large">
+    <o-list-item *ngFor="let row of list.dataArray">
+      <o-image class ="image1" attr="photo" data="{{ row.photo }}" read-only = "true" show-controls = "false" 
+      type="image"
+      empty-image="assets/images/no-image.png"
+      image-type="base64"
+      style="height: 200;"
+      ></o-image>
+      <o-list-item-text title="{{ row.name }}" primary-text="{{ row.rate }}" secondary-text="{{ row.content }}" class="list-text">
+      </o-list-item-text>
+    </o-list-item>
+  </o-list>
+</div>
