--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -127,7 +127,7 @@
 }
 
 .application-layout-content-wrapper:has(.hijo)  {
-  height: 100vh;
+  height: 93%;
   background-image: linear-gradient(to bottom, rgba(112, 111, 105, 0.2) 0%, rgba(54, 53, 42, 0.56) 100%), url("^assets/images/fondo-login.jpg");
   background-repeat: no-repeat;
   background-size: cover;
