--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -19,11 +19,13 @@
 </o-card-menu-item>
 </div>
 
-<div >
+<div container__home>
   <o-list #list attr="reviews" title="BEST_REVIEWS" service="reviews" entity="review" refresh-button ="no" quick-filter="no"
   delete-button ="no" keys="reviewid" columns="reviewid;content;rate;date;user_;gymid;photo;name" row-height="large">
+
+
     <o-list-item *ngFor="let row of list.dataArray">
-      <o-image class ="image1" attr="photo" data="{{ row.photo }}" read-only = "true" show-controls = "false" 
+      <o-image class ="image10" attr="photo" data="{{ row.photo }}" read-only = "true" show-controls = "false" 
       type="image"
       empty-image="assets/images/no-image.png"
       image-type="base64"
@@ -32,5 +34,7 @@
       <o-list-item-text title="{{ row.name }}" primary-text="{{ row.rate }}" secondary-text="{{ row.content }}" class="list-text">
       </o-list-item-text>
     </o-list-item>
+
   </o-list>
+
 </div>
