footer added to main

--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -9,7 +9,7 @@
  icon="fitness_center" route="/main/gyms">
 </o-card-menu-item>
   <o-card-menu-item  id="service" button-text= "MY_SERVICES" title="" 
- icon="sports_tennis" route= "/main/gymservices">
+ icon="edit_document" route= "/main/gymservices">
 </o-card-menu-item>
   <o-card-menu-item class="usuario" button-text="GYMS" title=""
  icon="directions_run" route="/main/gymsuser">
@@ -37,4 +37,12 @@
 
   </o-list>
 
+</div>
+
+<div class="footer">
+  <h3>WheGym</h3>
+
+  <div class="grid">
+    <img src="../../../assets/images/logo.png">
+  </div>
 </div>
