--- a/frontend/src/app/main/home/home.component.scss
+++ b/frontend/src/app/main/home/home.component.scss
@@ -7,4 +7,18 @@
     padding: 12px;
 }
 
+.footer {
+    width: 100%;
+    margin-left: -16px;
+    padding-right: 32px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
 
