--- a/frontend/src/app/main/gymsuser/gyms-grid-detail/gyms-grid-detail.component.html
+++ b/frontend/src/app/main/gymsuser/gyms-grid-detail/gyms-grid-detail.component.html
@@ -39,6 +39,9 @@
         <span *ngIf="data.schedule">
           <mat-icon>schedule</mat-icon>Horario: {{ data.schedule }}
         </span>
+        <div class="rate">
+          <span>{{ getStars(list.rate) }}</span>
+        </div>
         <!-- <span *ngIf="data.rate"> <mat-icon [ngStyle]="{'color':'#B2A000'}">star</mat-icon> {{ data.rate }} {{ 'stars' | oTranslate }}</span> -->
         <span *ngIf="data.categories">
           <mat-icon>checklist</mat-icon>{{ data.categories }}
