--- a/frontend/src/app/main/home/home.component.scss
+++ b/frontend/src/app/main/home/home.component.scss
@@ -15,10 +15,25 @@
     display: flex;
     justify-content: center;
     text-align: center;
+    margin-top: 30px;
 }
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns:1fr, 50px, 1fr, 50px, 1fr;
+
+}
+.grid img{
+    object-fit: contain;
+    height: 150px;
+}
+ul{
+    list-style: none;
+    text-align: justify;
+    font-size: small;
+}
+p{
+    font-size: small;
+    text-align: justify;
 }
 
