style footer added

--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -44,21 +44,26 @@
 
   <div class="grid">
     <div>
-      <h3>WheGym</h3>
-      <img src="../../../assets/images/logo.png">
+      <div class="image"><img src="../../../assets/images/logo.png"></div>
+      <ul class="networks">
+        <li><a href="#" class="fa fa-facebook"></a></li>
+        <li><a href="#" class="fa fa-twitter"></a></li>
+        <li><a href="#" class="fa fa-instagram"></a></li>
+        <li><a href="#" class="fa fa-youtube"></a></li>
+      </ul>
     </div>
     <div></div>
     <div>
-      <h3>{{'ABOUT_US' | oTranslate}}</h3>
+      <h4>{{'ABOUT_US' | oTranslate}}</h4>
       <p>{{'TEXT_ABOUT' | oTranslate}}</p>
     </div>
     <div></div>
     <div>
-      <h3>{{'CONTACT' | oTranslate}}</h3>
-      <ul>
-        <li><mat-icon>mail</mat-icon>wheGym@wheGym.com</li>
-        <li><mat-icon>call</mat-icon>+34 645 879 345</li>
-        <li><mat-icon>pin_drop</mat-icon>Edificio Citexvi, Fonte das Abelleiras, s/n · Local 27, 36310 Vigo, Pontevedra</li>
+      <h4>{{'CONTACT' | oTranslate}}</h4>
+      <ul class="contact">
+        <li><mat-icon>mail</mat-icon>&nbsp;wheGym@wheGym.com</li>
+        <li><mat-icon>call</mat-icon>&nbsp;+34 645 879 345</li>
+        <li><mat-icon>pin_drop</mat-icon>&nbsp;Fonte das Abelleiras, s/n · 36310 Vigo, Pontevedra</li>
       </ul>
     </div>
   </div>
