--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -229,14 +229,20 @@ div.o-grid-footer .ng-star-inserted  .mat-button-wrapper{
 .mat-list-base .mat-list-item.mat-3-line, .mat-list-base .mat-list-option.mat-3-line {
   height: 88px;
   background-color:#ECEFF1;
-  margin: 10px auto;
+  margin: 15px auto;
   padding: 10px;
   border-radius: 10px;
   width: 60%;
   border:1px solid #B2A000; 
+  box-shadow: 0px 0px 15px #000;
 }
 .o-list-container .mat-list .mat-3-line .o-custom-list-item{
   background-color: transparent;
   font-size: 1.2rem;
   color:black;
+}
+
+// scroll inicio
+.o-app-sidenav .o-app-sidenav-container .o-app-sidenav-content{
+  overflow: hidden !important;
 }
