rate & date reviews added

--- a/frontend/src/app/main/gymsuser/gyms-grid-home/gyms-grid-home.component.html
+++ b/frontend/src/app/main/gymsuser/gyms-grid-home/gyms-grid-home.component.html
@@ -39,9 +39,9 @@
       <mat-icon [ngStyle]="{'color':'#B2A000'}">star</mat-icon><span>{{ list.rate }} {{ 'stars' | oTranslate }}</span>
     </div> -->
     
-    <div class="categories">
+    <!-- <div class="categories">
       <mat-icon>checklist</mat-icon><span>{{ list.categories }}</span>
-    </div>
+    </div> -->
 
   </div>
     </o-grid-item>
