--- a/frontend/src/app/main/gymsuser/gyms-grid-detail/gyms-grid-detail.component.html
+++ b/frontend/src/app/main/gymsuser/gyms-grid-detail/gyms-grid-detail.component.html
@@ -1,7 +1,7 @@
 <div class="containerGridDetail">
  
   <!-- container 1 -->  
-<div class="container_log_datos">
+  <div class="container_log_datos">
 
       <div class="logo">
                  <o-image
@@ -27,7 +27,7 @@
          </div>         <!--  cierre div titulo -->
   
                  </div>       <!--  cierre logo+  titulo -->
-     <div class="datos">
+    <div class="datos">
       
       
         <span class="city">
@@ -39,48 +39,47 @@
         <span *ngIf="data.schedule">
           <mat-icon>schedule</mat-icon>Horario: {{ data.schedule }}
         </span>
-        <div class="rate">
-          <span>{{ getStars(list.rate) }}</span>
-        </div>
+        
+        <span class="rate">{{ getStars(data.rate) }}</span>
+      
         <!-- <span *ngIf="data.rate"> <mat-icon [ngStyle]="{'color':'#B2A000'}">star</mat-icon> {{ data.rate }} {{ 'stars' | oTranslate }}</span> -->
         <span *ngIf="data.categories">
           <mat-icon>checklist</mat-icon>{{ data.categories }}
         </span>
-      </div>      <!--  cierre div datos -->
+    </div>      <!--  cierre div datos -->
 
 
-   <div class="images_carro">
+  <div class="images_carro">
+    <o-image
+      class="image1"
+      attr="image1"
+      data="{{ data.image1 }}"
+      read-only="true"
+      show-controls="false"
+      type="image"
+      empty-image="assets/images/no-image.png"
+      image-type="base64">
+    </o-image>
+    <o-image
+      class="image1"
+      attr="image2"
+      data="{{ data.image2 }}"
+      read-only="true"
+      show-controls="false"
+      type="image"
+      empty-image="assets/images/no-image.png"
+      image-type="base64"
+    ></o-image>
 
- <o-image
-   class="image1"
-   attr="image1"
-   data="{{ data.image1 }}"
-   read-only="true"
-   show-controls="false"
-   type="image"
-   empty-image="assets/images/no-image.png"
-   image-type="base64">
- </o-image>
- <o-image
-   class="image1"
-   attr="image2"
-   data="{{ data.image2 }}"
-   read-only="true"
-   show-controls="false"
-   type="image"
-   empty-image="assets/images/no-image.png"
-   image-type="base64"
- ></o-image>
-
- <o-image
-   class="image1"
-   attr="image3"
-   data="{{ data.image3 }}"
-   read-only="true"
-   show-controls="false"
-   type="image"
-   empty-image="assets/images/no-image.png"
-   image-type="base64"
- ></o-image>
-</div>
+    <o-image
+      class="image1"
+      attr="image3"
+      data="{{ data.image3 }}"
+      read-only="true"
+      show-controls="false"
+      type="image"
+      empty-image="assets/images/no-image.png"
+      image-type="base64"
+    ></o-image>
+  </div>
 </div>
