--- a/frontend/src/app/main/gymsuser/gyms-grid-home/gyms-grid-home.component.css
+++ b/frontend/src/app/main/gymsuser/gyms-grid-home/gyms-grid-home.component.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
     box-shadow: 0px 0px 30px #393e46;
-    padding: 0 12px;
+    padding: 50px 12px 10px;
     width: 70%;
     cursor: pointer;
     background-color: #ffffffd4;
