--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -3,24 +3,25 @@
     Ontimize web seed application home component
   </p>
 </div> -->
-<div  class ="hijo"fxLayout="row" layout-padding fxLayoutAlign="center center">
+<!-- <div  class ="hijo"fxLayout="row" layout-padding fxLayoutAlign="center center">
   
-  <o-card-menu-item class="admin" button-text="MY_GYMS" title="" button-color="white"
- icon="fitness_center" route="/main/gyms">
-</o-card-menu-item>
-  <o-card-menu-item  id="service" button-text= "MY_SERVICES" title="" 
- icon="edit_document" route= "/main/gymservices">
-</o-card-menu-item>
-  <o-card-menu-item class="usuario" button-text="GYMS" title=""
- icon="directions_run" route="/main/gymsuser">
-</o-card-menu-item>
-  <o-card-menu-item id="access" button-text="QR_CODE" title=""
- icon="qr_code" route="/main/accesscard">
-</o-card-menu-item>
-</div>
+    <o-card-menu-item class="admin" button-text="MY_GYMS" title="" button-color="white"
+  icon="fitness_center" route="/main/gyms">
+  </o-card-menu-item>
+    <o-card-menu-item  id="service" button-text= "MY_SERVICES" title="" 
+  icon="edit_document" route= "/main/gymservices">
+  </o-card-menu-item>
+    <o-card-menu-item class="usuario" button-text="GYMS" title=""
+  icon="directions_run" route="/main/gymsuser">
+  </o-card-menu-item>
+    <o-card-menu-item id="access" button-text="QR_CODE" title=""
+  icon="qr_code" route="/main/accesscard">
+  </o-card-menu-item>
+</div> -->
 
-<div container__home>
-  <o-list #list attr="reviews" title="BEST_REVIEWS" service="reviews" entity="review" refresh-button ="no" quick-filter="no"
+<div class ="hijo">
+  <h2 class=" title_home">{{'BEST_REVIEWS' | oTranslate}}</h2>
+  <o-list #list attr="reviews" service="reviews" entity="review" refresh-button ="no" quick-filter="no"
   delete-button ="no" keys="reviewid" columns="reviewid;content;rate;date;user_;gymid;photo;name" row-height="large">
 
 
@@ -31,7 +32,7 @@
       image-type="base64"
       style="height: 200;"
       ></o-image>
-      <o-list-item-text title="{{ row.name }}" primary-text="{{ getStars(row.rate) }}" secondary-text="{{ row.content }}" class="list-text">
+      <o-list-item-text title="{{ row.name }}" primary-text="{{ getStars(row.rate) }}" secondary-text="{{ row.date | date:'dd-MM-yy'}}: {{ row.content }}" class="list-text">
       </o-list-item-text>
     </o-list-item>
 
@@ -44,7 +45,7 @@
 
   <div class="grid">
     <div>
-      <div class="image"><img src="../../../assets/images/logo.png"></div>
+      <div class="image_logo"><img src="../../../assets/images/logo.png"></div>
       <ul class="networks">
         <li><a href="#" class="fa fa-facebook"></a></li>
         <li><a href="#" class="fa fa-twitter"></a></li>
@@ -61,9 +62,9 @@
     <div>
       <h4>{{'CONTACT' | oTranslate}}</h4>
       <ul class="contact">
-        <li><mat-icon>mail</mat-icon>&nbsp;wheGym@wheGym.com</li>
-        <li><mat-icon>call</mat-icon>&nbsp;+34 645 879 345</li>
-        <li><mat-icon>pin_drop</mat-icon>&nbsp;Fonte das Abelleiras, s/n · 36310 Vigo, Pontevedra</li>
+        <li><i class="fa fa-envelope" ></i>&nbsp;wheGym@wheGym.com</li>
+        <li><i class="fa fa-phone" ></i>&nbsp;+34 645 879 345</li>
+        <li><i class="fa fa-map-marker" ></i>&nbsp;Fonte das Abelleiras, s/n · 36310 Vigo, Pontevedra</li>
       </ul>
     </div>
   </div>
