--- a/frontend/src/app/main/home/home.component.scss
+++ b/frontend/src/app/main/home/home.component.scss
@@ -11,13 +11,14 @@
     width: 100%;
     margin-left: -16px;
     padding-right: 32px;
-    background-color: #ECEFF1;
+    background-color:#d4d6df;
+    background: linear-gradient(to bottom, #d4d6df, #5a5959);
     border:#B2A000 solid 2px;
     box-shadow: 0px 0px 30px #000;
     display: flex;
     justify-content: center;
     text-align: center;
-    margin-top: 200px;
+    margin-top: 50px;
     margin-bottom: -8px;
     padding-bottom: 40px;
     padding-top: 40px;
@@ -28,7 +29,7 @@
     grid-template-columns:1fr 50px 1fr 50px 1fr;
 
 }
-.image{
+.image_logo{
     display: flex;
     justify-content: center;
 }
@@ -44,9 +45,6 @@ ul{
 p{
     font-size: 0.8rem;
     text-align: justify;
-}
-.mat-icon{
-color: #B2A000;
 }
 
 .fa {
@@ -67,5 +65,15 @@ color: #B2A000;
 }
 .contact{
     margin-left: 30px;
+}
+
+.hijo {
+    position: relative;
+}
+.title_home{
+    position: absolute;
+    top: 5px;
+    left:38%;
+    font-size:2rem;
 }
 
